MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfwnt/libfwnt.vcproj \
	libregf/libregf.vcproj \
	libuna/libuna.vcproj \
	pyregf/pyregf.vcproj \
	regf_test_error/regf_test_error.vcproj \
	regf_test_key/regf_test_key.vcproj \
	regf_test_notify/regf_test_notify.vcproj \
	regf_test_open_close/regf_test_open_close.vcproj \
	regf_test_support/regf_test_support.vcproj \
	regf_test_value/regf_test_value.vcproj \
	regfexport/regfexport.vcproj \
	regfinfo/regfinfo.vcproj \
	regfmount/regfmount.vcproj \
	libregf.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

